5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1585_2895.log
== TEST (2019-03-21 11:32:53) 
-- CODE:
float(input("quantidade de jogos"))
preco = 300
frete = 45
print( preco + frete)
-- OUTPUT:
345
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:33:45) 
-- CODE:
jogos = 8
preco = 300
frete = 45
print( preco + frete * jogos)
-- OUTPUT:
660
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:33:47) 
-- CODE:
jogos = 8
preco = 300
frete = 45
print( preco + frete * jogos)
-- EXECUTION TIME:
0.163307
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
660
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
660
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
660
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:38:45) 
-- CODE:
jogos = float(input("preco dos jogos"))
valor unitario = 50
frete = 30
-- EXECUTION TIME:
0.198818
-- ERROR:
  File "/home/codebench/codes/1585/2895/main.py", line 2
    valor unitario = 50
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:38:45) 
-- CODE:
jogos = float(input("preco dos jogos"))
valor unitario = 50
frete = 30
-- ERROR:
File "XXXX", line 2
    valor unitario = 50
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:07) 
-- CODE:
jogos = float(input("preco dos jogos"))
valor unitario = 50.0
frete = 30.0
-- ERROR:
File "XXXX", line 2
    valor unitario = 50.0
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:39:09) 
-- CODE:
jogos = float(input("preco dos jogos"))
valor unitario = 50.0
frete = 30.0
-- ERROR:
File "XXXX", line 2
    valor unitario = 50.0
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:40:12) 
-- CODE:
jogos = float(input("preco dos jogos"))
valor = 50.0
frete = 30.0
print(jogos * valor + frete )
-- OUTPUT:
630.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:40:13) 
-- CODE:
jogos = float(input("preco dos jogos"))
valor = 50.0
frete = 30.0
print(jogos * valor + frete )
-- EXECUTION TIME:
0.165837
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
630.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
530.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
12330.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:42:58) 
-- CODE:
jogos = float(input("preco dos jogos"))
valor = 50.0
frete = 30.0
 
total = (jogos * valor + frete)

print(total)
-- EXECUTION TIME:
0.126118
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
630.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
530.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
12330.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:42:59) 
-- CODE:
jogos = float(input("preco dos jogos"))
valor = 50.0
frete = 30.0
 
total = (jogos * valor + frete)

print(total)
-- OUTPUT:
630.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:43:42) 
-- CODE:
jogos = float(input("preco dos jogos"))
valor = 50.0
frete = 30.0
 
total = jogos * valor + frete

print(total)
-- EXECUTION TIME:
0.145512
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
630.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
530.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
12330.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:43:43) 
-- CODE:
jogos = float(input("preco dos jogos"))
valor = 50.0
frete = 30.0
 
total = jogos * valor + frete

print(total)
-- OUTPUT:
630.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:44:01) 
-- CODE:
jogos = float(input("preco dos jogos"))
valor = 50.0
frete = 30.0
 
total = jogos * valor + frete

print(total)
-- EXECUTION TIME:
0.169363
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
630.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
530.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
12330.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:45:09) 
-- CODE:
quantidade = float(input("preco dos jogos"))
valor unitario = 50.0
frete = 30.0
 
preco total = jogos * valor + frete

print(preco total)
-- EXECUTION TIME:
0.164319
-- ERROR:
  File "/home/codebench/codes/1585/2895/main.py", line 2
    valor unitario = 50.0
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:10) 
-- CODE:
quantidade = float(input("preco dos jogos"))
valor unitario = 50.0
frete = 30.0
 
preco total = jogos * valor + frete

print(preco total)
-- ERROR:
File "XXXX", line 2
    valor unitario = 50.0
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:45:21) 
-- CODE:
quantidade = float(input("preco dos jogos"))
valorunitario = 50.0
frete = 30.0
 
preco total = jogos * valor + frete

print(preco total)
-- EXECUTION TIME:
0.228315
-- ERROR:
  File "/home/codebench/codes/1585/2895/main.py", line 5
    preco total = jogos * valor + frete
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:22) 
-- CODE:
quantidade = float(input("preco dos jogos"))
valorunitario = 50.0
frete = 30.0
 
preco total = jogos * valor + frete

print(preco total)
-- ERROR:
File "XXXX", line 5
    preco total = jogos * valor + frete
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:45:28) 
-- CODE:
quantidade = float(input("preco dos jogos"))
valorunitario = 50.0
frete = 30.0
 
precototal = jogos * valor + frete

print(preco total)
-- EXECUTION TIME:
0.202641
-- ERROR:
  File "/home/codebench/codes/1585/2895/main.py", line 7
    print(preco total)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:29) 
-- CODE:
quantidade = float(input("preco dos jogos"))
valorunitario = 50.0
frete = 30.0
 
precototal = jogos * valor + frete

print(preco total)
-- ERROR:
File "XXXX", line 7
    print(preco total)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:34) 
-- CODE:
quantidade = float(input("preco dos jogos"))
valorunitario = 50.0
frete = 30.0
 
precototal = jogos * valor + frete

print(precototal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    precototal = jogos * valor + frete
NameError: name 'jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:45:34) 
-- CODE:
quantidade = float(input("preco dos jogos"))
valorunitario = 50.0
frete = 30.0
 
precototal = jogos * valor + frete

print(precototal)
-- EXECUTION TIME:
0.151231
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 5, in <module>
    precototal = jogos * valor + frete
NameError: name 'jogos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:45:35) 
-- CODE:
quantidade = float(input("preco dos jogos"))
valorunitario = 50.0
frete = 30.0
 
precototal = jogos * valor + frete

print(precototal)
-- EXECUTION TIME:
0.12925
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 5, in <module>
    precototal = jogos * valor + frete
NameError: name 'jogos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:45:36) 
-- CODE:
quantidade = float(input("preco dos jogos"))
valorunitario = 50.0
frete = 30.0
 
precototal = jogos * valor + frete

print(precototal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    precototal = jogos * valor + frete
NameError: name 'jogos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:46:04) 
-- CODE:
quantidade = float(input("preco dos jogos"))
valorunitario = 50.0
frete = 30.0
 
precototal = quantidade * valorunitario + frete

print(precototal)
-- EXECUTION TIME:
0.154958
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
630.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
530.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
12330.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:46:04) 
-- CODE:
quantidade = float(input("preco dos jogos"))
valorunitario = 50.0
frete = 30.0
 
precototal = quantidade * valorunitario + frete

print(precototal)
-- OUTPUT:
630.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:48:09) 
-- CODE:
quantidade = float(input("preco dos jogos: "))
valorunitario = 50.0
frete = 30.0
 
precototal = quantidade * valorunitario + frete

print(precototal)
-- EXECUTION TIME:
0.28406
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
630.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
530.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
12330.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:10) 
-- CODE:
quantidade = float(input("preco dos jogos: "))
valorunitario = 50.0
frete = 30.0
 
precototal = quantidade * valorunitario + frete

print(precototal)
-- OUTPUT:
630.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:48:31) 
-- CODE:
quantidade = float(input("preco dos jogos: "))
valorunitario = 100.0
frete = 40.0
 
precototal = quantidade * valorunitario + frete

print(precototal)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:48:32) 
-- CODE:
quantidade = float(input("preco dos jogos: "))
valorunitario = 100.0
frete = 40.0
 
precototal = quantidade * valorunitario + frete

print(precototal)
-- EXECUTION TIME:
0.120234
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:19) 
-- CODE:
jogos = float(input("quantidade: "))
valorunitario = 100.0
frete = 40.0
 
precototal = jogos * valorunitario + frete

print(precototal)
-- EXECUTION TIME:
0.129535
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:20) 
-- CODE:
jogos = float(input("quantidade: "))
valorunitario = 100.0
frete = 40.0
 
precototal = jogos * valorunitario + frete

print(precototal)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:49:36) 
-- CODE:
jogos = float(input("quantidade: "))
valorunitario = 100.0
frete = 40.0
 
precototal = jogos * valorunitario + frete

print(precototal)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:49:43) 
-- CODE:
jogos = float(input("quantidade: "))
valorunitario = 100.0
frete = 40.0
 
precototal = jogos * valorunitario + frete

print(precototal)
-- EXECUTION TIME:
0.202187
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:50:34) 
-- CODE:
jogos = float(input("quantidade: "))
valorunitario = 100.0
frete = 40.0
 
precototal = jogos * valorunitario 

print(precototal + frete)
-- EXECUTION TIME:
0.207492
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:50:34) 
-- CODE:
jogos = float(input("quantidade: "))
valorunitario = 100.0
frete = 40.0
 
precototal = jogos * valorunitario 

print(precototal + frete)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:53:35) 
-- CODE:
jogos = float(input("quantidade: "))
valorunitario = float(input("valor unitario"))
frete = ("frete")
 
precototal = jogos * valorunitario 

print(precototal + frete)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(precototal + frete)
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:53:36) 
-- CODE:
jogos = float(input("quantidade: "))
valorunitario = float(input("valor unitario"))
frete = ("frete")
 
precototal = jogos * valorunitario 

print(precototal + frete)
-- EXECUTION TIME:
0.121795
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/2895/main.py", line 7, in <module>
    print(precototal + frete)
TypeError: unsupported operand type(s) for +: 'float' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:53:57) 
-- CODE:
jogos = float(input("quantidade: "))
valorunitario = float(input("valor unitario"))
frete = float(input("frete"))
 
precototal = jogos * valorunitario 

print(precototal + frete)
-- EXECUTION TIME:
0.126905
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:53:58) 
-- CODE:
jogos = float(input("quantidade: "))
valorunitario = float(input("valor unitario"))
frete = float(input("frete"))
 
precototal = jogos * valorunitario 

print(precototal + frete)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:42:45) 
-- CODE:
jogos = float(input("quantidade: "))
valorunitario = float(input("valor unitario"))
frete = float(input("frete"))
 
precototal = jogos * valorunitario 

print(precototal + frete)
-- EXECUTION TIME:
0.136061
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 12:44:25) 
-- CODE:
jogos = float(input("quantidade: "))
valorunitario = float(input("valor unitario"))
frete = float(input("frete"))
 
precototal = jogos * valorunitario 

print(precototal + frete)
-- EXECUTION TIME:
0.135232
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
